distribution/kubeflow/central-dashboard/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kfserving-models-web-app
  namespace: kubeflow
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: centraldashboard
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
